# dezirclip

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  ROADMAP.md  index.html  known_bugs.typ  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.omo/evidence/: task-17-qrcode-dialog.txt  (+1 more)
docs/: LINUX_INSTALL.md  cli.md
dzc-standalone/: Cargo.toml
flatpak/: io.github.qiyuanhuakai.dezirclip.yml
scripts/: i18n-check.mjs  prepare-flatpak-root.mjs  prepare-tauri-sidecars.mjs  set-release-version.mjs
src/: App.tsx  index.css  locales.ts  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  test_x11rb
src-tauri/binaries/: tiez-c-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  cli_infrastructure.rs  cli_services.rs  database.rs  global_state.rs  lib.rs  logger.rs  main.rs  migration.rs  test_button_check.rs
src-tauri/src/app/: app_exit.rs  gpu_switcher.rs  idle_destroyer.rs  mod.rs  setup.rs  system.rs  webview_memory.rs  webview_proc.rs  window_manager.rs
src-tauri/src/app/commands/: classification_cmd.rs  clipboard_cmd.rs  export_cmd.rs  file_cmd.rs  font_cmd.rs  history_cmd.rs  hotkey_cmd.rs  import_cmd.rs  mod.rs  ocr_cmd.rs  qr_cmd.rs  quick_paste_cmd.rs  screenshot_cmd.rs  search_cmd.rs  settings_cmd.rs  system_cmd.rs  tag_color_cmd.rs  tools_cmd.rs  transform_cmd.rs  ui_cmd.rs
src-tauri/src/app/hooks/: mod.rs
src-tauri/src/domain/: models.rs
src-tauri/src/infrastructure/: cli_path.rs  encryption.rs  mod.rs  webview_environment.rs  windows_ext.rs
src-tauri/src/infrastructure/linux_api/: apps.rs  clipboard.rs  input_grab.rs  mod.rs  mouse_hotkey.rs  paste.rs  tray.rs  window_tracker.rs
src-tauri/src/infrastructure/repository/: clipboard_repo.rs  migrations.rs  mod.rs  settings_repo.rs  tag_repo.rs
src-tauri/src/infrastructure/windows_api/: apps.rs  drag_drop.rs  mod.rs  webview_environment.rs  win_clipboard.rs  window_tracker.rs
src-tauri/src/services/: backup.rs  classification.rs  clipboard_listener.rs  clipboard_ops.rs  content_handler.rs  mod.rs  paste_queue.rs  qr.rs  screenshot.rs  search.rs  sensitive_align.rs  transforms.rs
src-tauri/src/services/clipboard/: mod.rs  mod.rs.backup  pipeline.rs  utils.rs
src-tauri/src/services/ocr/: linux.rs  mod.rs  windows.rs
src-tauri/tests/: backup_e2e.rs  dzc_cli.rs
tiez-c-standalone/: Cargo.toml
(+152 files in other folders)
