[package]
name = "tiez-app"
version = "0.3.1"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "tiez-app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
portable = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11", features = ["tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
base64 = "0.22"
rusqlite = { version = "0.31", features = ["bundled", "functions"] }

arboard = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif", "webp"] }
tokio = { version = "1", features = ["time"] }
tauri-plugin-dialog = "2.7"
tauri-plugin-global-shortcut = "2.3.1"
window-vibrancy = "0.7.1"

regex = "1.12.2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
uuid = { version = "1.19.0", features = ["v4"] }
urlencoding = "2.1.3"
machine-uid = "0.5"
sha2 = "0.10"
dotenvy = "0.15"

dirs = "5.0"
qrcode2 = "0.18"
xcap = "0.9.6"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp", "Win32_UI_Shell", "Win32_UI_Input_KeyboardAndMouse", "Win32_Graphics_Dwm", "Win32_System_LibraryLoader", "Win32_System_DataExchange", "Win32_System_Memory", "Win32_UI_Controls", "Win32_Security_Cryptography", "Win32_UI_Accessibility", "Win32_UI_Input_Ime", "Win32_Globalization", "Win32_Graphics_Gdi", "Win32_System_Com", "Win32_System_Com_StructuredStorage", "Win32_System_Ole", "Win32_System_SystemServices", "Media_Ocr"] }
windows-core = "0.61"
windows-version = "0.1.1"
winreg = "0.55.0"
webview2-com = "0.38.2"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["xtest", "allow-unsafe-code"] }
x11-clipboard = "0.9"
aes-gcm = "0.10"
rand = "0.8"
keyring = { version = "3", features = ["linux-native"] }

# ============ Release 体积优化 ============
[profile.release]
# 启用 LTO (Link Time Optimization) - 可减少约 10-20% 体积
lto = true
# 使用单个 codegen unit，更好的优化但编译更慢
codegen-units = 1
# 优化级别：s = 优化大小，z = 更激进的大小优化
opt-level = "s"
# 移除符号表和调试信息
strip = true
# 启用 panic = abort 减少 unwinding 代码
panic = "abort"
